feat: 添加完全测试队伍功能的的大部分代码